--- a/404.html
+++ b/404.html
@@ -314,7 +314,7 @@
 					<div class="heading-block border-bottom-0">
 						<h4>Ooopps! The page you were looking for couldn't be found.</h4>
 					</div>
-					<a type="button" class="btn btn-outline-primary" href="">Come back home</a>
+					<a type="button" class="btn btn-outline-primary" href="">Back to home page</a>
 				</div>
 			</div>
 
