--- a/TDR-Duty-Free-Returns-to-the-US.html
+++ b/TDR-Duty-Free-Returns-to-the-US.html
@@ -385,7 +385,7 @@
       <div class="content-wrap">
         <div class="container">
           <div class="block-hero-25">
-            <div class="row align-items-lg-center gutter-50">
+            <div class="row align-items-lg-center gutter-50 flex-wrap">
               <div class="col-lg-6">
                 <svg width="100%"viewBox="0 0 618.78137 112.40881" version="1.1"
   id="SVGDutyFreeReturnsToTheUS" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" fill="var(--white)">
@@ -474,9 +474,9 @@ Warehouse" id="text8670"
 </script>
               </div>
               <div class="col-lg-6 align-self-center">
-                <h1 class="h1 fw-semibold lh-X mb-5 text-white">
+                <p class="h2 fw-semibold lh-X mb-5 text-white">
                   Reduce the impact of e-commerce return costs.
-                </h1>
+                </p>
               </div>
             </div>
           </div>
@@ -685,23 +685,17 @@ Warehouse" id="text8670"
 </section>
     </section>
     <!-- #content end -->
-    <section id="content">
-  <div class="content-wrap">
     <div class="container">
-
-      <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</h2>
-        <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
-          class="button button-large button-rounded text-white">Send Us A
-          Message</a>
-          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
-        </div>
-      </div>
-
+  <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+    <h2 class="mb-1 h2">Eager to start saving big?</h2>
+    <h3 class="mb-4 fw-medium">You're just one click away.</h3>
+    <div class="btn-group" role="group" aria-label="Contact Us Button Group">
+      <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        Message</a>
+      <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
     </div>
   </div>
-</section>
+</div>
 
     <style>
   #footer {
