--- a/about-us.html
+++ b/about-us.html
@@ -298,7 +298,7 @@
 				<div class="page-title-row">
 					<div class="page-title-content">
 						<h1>About Us</h1>
-						<span>Everything you need to know about our Company</span>
+						<span></span>
 					</div>
 				</div>
 			</div>
@@ -324,7 +324,7 @@
 							</div>
 
 							At Trade Duty Refund, we pride ourselves on being the trusted partner for businesses navigating the complexities of global commerce. Here's why our clients choose us:
-							<ul>
+							<ul class="px-4 px-md-0">
 								<li>
 									<strong>Expertise in Duty-Free Returns</strong>: Our in-depth knowledge of customs regulations in the EU, UK, and US ensures seamless returns, saving businesses time and money.
 								</li>
@@ -358,7 +358,7 @@
 								<h4>What we <span>Do</span>.</h4>
 							</div>
 							Trade Duty Refund specializes in simplifying the process of duty-free returns for businesses engaged in international trade.
-							<ul>
+							<ul class="px-4 px-md-0">
 								<li>
 									<strong>Seamless Duty-Free Returns</strong>: We handle all aspects of returning goods duty-free, ensuring compliance with regulations in the EU, UK, and US.
 								</li>
