--- a/solutions-for-all-shippers.html
+++ b/solutions-for-all-shippers.html
@@ -98,6 +98,31 @@
   <link rel="stylesheet" href="./css/custom/verticalSteps.css">
 
 </head>
+<div class="modal-on-load" data-target="#myModal1"></div>
+
+<!-- Modal -->
+<div class="modal1 mfp-hide" id="myModal1" data-animation-in="bounceInUp" data-animation-out="bounceOutUp"
+  data-bg-click>
+  <div class="block mx-auto samaritan-background" style="max-width: 500px;">
+    <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+      <h2 class="mb-1 h2">We have dedicated solutions for
+        <a href="solutions-for-us-shippers.html" class="button-circle">
+          <strong>US</strong>
+        </a>
+        <a href="solutions-for-eu-shippers.html" class="button-circle">
+          <strong>EU</strong>
+        </a>
+        <a href="solutions-for-uk-shippers.html" class="button-circle">
+          <strong>UK</strong>
+        </a>
+        shippers
+      </h2>
+      <h2 class="mb-4 h2">Check them out!</h2>
+
+    </div>
+  </div>
+</div>
+
 
 <body class="stretched samaritan-background">
   <div id="wrapper">
@@ -286,25 +311,12 @@
   </div>
   <div class="header-wrap-clone"></div>
 </header>
+    <div class="container">
+
+    </div>
+
 
     <section id="content">
-      <div class="container text-center">
-        <div class="alert samaritan d-inline-block" role="alert">
-          <p class="mb-0 lead">
-            We have dedicated solutions for
-            <a href="solutions-for-us-shippers.html" class="button-circle">
-              <strong>US</strong>
-            </a>
-            <a href="solutions-for-eu-shippers.html" class="button-circle">
-              <strong>EU</strong>
-            </a>
-            <a href="solutions-for-uk-shippers.html" class="button-circle">
-              <strong>UK</strong>
-            </a>
-            shippers. Check them out!
-          </p>
-        </div>
-      </div>
 
       <div class="container">
         <div class="page-title-row pt-5 pb-3">
@@ -315,11 +327,12 @@
               <div class="fw-bold display-5">End-to-End Duty Refund Solution for eCom Shippers</div>
             </h1>
             <span class="fw-light" style="max-width: 40em;">
-              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. By seamlessly reclaiming import duties on goods returned by US or European customers, we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services.
             </span>
           </div>
         </div>
       </div>
+
 
       <div class="content-wrap pb-1">
         <div class="container">
@@ -436,23 +449,17 @@
       </div>
     </section>
 
-    <section id="content">
-  <div class="content-wrap">
     <div class="container">
-
-      <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</h2>
-        <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
-          class="button button-large button-rounded text-white">Send Us A
-          Message</a>
-          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
-        </div>
-      </div>
-
+  <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+    <h2 class="mb-1 h2">Eager to start saving big?</h2>
+    <h3 class="mb-4 fw-medium">You're just one click away.</h3>
+    <div class="btn-group" role="group" aria-label="Contact Us Button Group">
+      <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        Message</a>
+      <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
     </div>
   </div>
-</section>
+</div>
 
     <style>
   #footer {
