--- a/solutions-for-us-shippers.html
+++ b/solutions-for-us-shippers.html
@@ -303,7 +303,7 @@
                     </div>
                 </h1>
                 <span class="fw-light" style="max-width: 40em;">
-                    Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. From reclaiming duties on unused goods under the U.S. Duty Drawback scheme to navigating EU duty refunds and ensuring duty-free returns to the U.S., we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+                    Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services.
                 </span>
             </div>
         </div>
@@ -468,23 +468,17 @@
         </div>
       </div>
     </section>
-    <section id="content">
-  <div class="content-wrap">
     <div class="container">
-
-      <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</h2>
-        <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
-          class="button button-large button-rounded text-white">Send Us A
-          Message</a>
-          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
-        </div>
-      </div>
-
+  <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+    <h2 class="mb-1 h2">Eager to start saving big?</h2>
+    <h3 class="mb-4 fw-medium">You're just one click away.</h3>
+    <div class="btn-group" role="group" aria-label="Contact Us Button Group">
+      <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        Message</a>
+      <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
     </div>
   </div>
-</section>
+</div>
 
     <style>
   #footer {
