--- a/TDR-Duty-Drawback-in-Europe.html
+++ b/TDR-Duty-Drawback-in-Europe.html
@@ -386,7 +386,7 @@
 
           <div class="block-hero-25">
 
-            <div class="row align-items-lg-center gutter-50">
+            <div class="row align-items-lg-center gutter-50 flex-wrap">
               <div class="col-lg-6">
 
                 <svg id="SVGDutyDrawbackInEurope" width="100%" viewBox="0 0 618.78137 112.40881" version="1.1" id="svg28812"
@@ -474,7 +474,7 @@
               </div>
 
               <div class="col-lg-6 align-self-center">
-                <p class="h1 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to EU and UK Customs for merchandise imported that is later exported.</p>
+                <p class="h2 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to EU and UK Customs for merchandise imported that is later exported.</p>
               </div>
             </div>
 
@@ -658,23 +658,17 @@
 
     </section>
     <!-- #content end -->
-    <section id="content">
-  <div class="content-wrap">
     <div class="container">
-
-      <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</h2>
-        <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
-          class="button button-large button-rounded text-white">Send Us A
-          Message</a>
-          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
-        </div>
-      </div>
-
+  <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+    <h2 class="mb-1 h2">Eager to start saving big?</h2>
+    <h3 class="mb-4 fw-medium">You're just one click away.</h3>
+    <div class="btn-group" role="group" aria-label="Contact Us Button Group">
+      <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        Message</a>
+      <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
     </div>
   </div>
-</section>
+</div>
 
     <style>
   #footer {
