--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -302,7 +302,7 @@
               </div>
             </h1>
             <span class="fw-light" style="max-width: 40em;">
-              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services. By reclaiming import duties on goods returned by US or UK customers and re-importing them in the EU at 0% duty rate, we simplify global e-commerce duty reclaim to help you minimize costs and boost profitability.
+              Unlock hidden savings in your eCommerce supply chain with our specialized duty and tax recovery services.
             </span>
           </div>
         </div>
@@ -435,23 +435,17 @@
       </div>
     </section>
 
-    <section id="content">
-  <div class="content-wrap">
     <div class="container">
-
-      <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</h2>
-        <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
-          class="button button-large button-rounded text-white">Send Us A
-          Message</a>
-          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
-        </div>
-      </div>
-
+  <div class="promo shadow-sm text-center p-4 border rounded-5 mb-5">
+    <h2 class="mb-1 h2">Eager to start saving big?</h2>
+    <h3 class="mb-4 fw-medium">You're just one click away.</h3>
+    <div class="btn-group" role="group" aria-label="Contact Us Button Group">
+      <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        Message</a>
+      <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
     </div>
   </div>
-</section>
+</div>
 
     <style>
   #footer {
